labs/lab04/k8s/network-policy.yaml
# Network Policy para segmentar el tráfico (Blue Team)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lab-isolation
  namespace: lab-expert
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: lab-expert
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: lab-expert
    - to: []
      ports:
        - port: 53
          protocol: UDP
